docs: reformated existing documentation
